2011-01-21  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gradio.R: Replaced this and gcheckboxgroup with a new design
	using a backend Reference class. The code is much cleaner, but I
	still get instability running under gctorture.

2011-01-19  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggraphicsnotebook.R: quieted down warnings about partial
	argument matching.

2011-01-17  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gedit.R (.svalue<-): fix to svalue and init_msg

2011-01-10  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdroplist.R (.as.gWidgetsRGtk2.gdroplist): [<- remembers where
	it is (if possible) when we replace objects

2011-01-05  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggrid.R: added columnWidths option to size<- method. Pass in
	size value as list with this component

2011-01-04  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gaction.R: put in key.accel bit. Needs parent to be passed in.

	* R/aaaGenerics.R: update tooltip<- to newer GTK style

2010-12-14  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdroplist.R: fix minimum column width under windows (15 was
	too narrow a minimum)

2010-12-02  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtext.R (.addTags): put in check that we aren't redoing a text tag

2010-11-23  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gvarbrowser.R (updateCallback): replace idle handler with
	taskCallback for update. Seems much nicer, although possibly
	fragile as a  user can remove the callback too easily.

2010-11-10  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/glayout.R (as.gWidgetsRGtk2.GtkTable): New logic to handle
	expand, fill, anchor arguments when widget packed into
	gtkAlignment container

2010-11-09  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gbutton.R (as.gWidgetsRGtk2.GtkButton): put in